[tool.poetry]
name = "navigator"
version = "0.1.0"
description = "A Navigation App for Warp Travel in Rogue Trader"
authors = ["Leon Eikelmann"]

[tool.poetry.dependencies]
python = "^3.8"
wxpython = "^4.0.7"
black = "^19.10b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
